# dorobot-to-lerobot

./: .gitignore  README.md  pyproject.toml
dorobot_to_lerobot/: __init__.py  annotation_utils.py  main.py  stats_utils.py
