[project]
name = "dorobot-to-lerobot"
version = "0.1.0"
description = "Merge dorobot single-episode recordings into clean LeRobot-style datasets."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "pyarrow>=12.0",
]

[project.scripts]
dorobot-to-lerobot = "dorobot_to_lerobot.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dorobot_to_lerobot"]

